tweak styles to avoid excess whitespace on large screens; avoid local console error by importing chroma from cdn

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,15 +50,20 @@
 
   body {
 		font-family: var(--font-main), var(--font-main-fallback);
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh;
 	}
 	header {
 		border-bottom: 2px solid var(--bg-dark);
+		flex-shrink: 0;
 	}
 	footer {
 		padding: 24px;
 		padding-left: 8px;
 		padding-right: 8px;
 		background-color: var(--bg-dark);
+		flex-shrink: 0;
 	}
 	h1,h2,h3,h4,h5,h6 {
 		font-family: var(--font-title), var(--font-title-fallback);
@@ -81,6 +86,20 @@
 		padding-bottom:2px;
 	}
 
+	#main {
+		flex-grow: 1;
+		position: relative;
+	}
+	.bg-muted {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 	#main-container {
 	  padding: 0;
 	}
